try to fix scroll on mobile project modal

--- a/style.css
+++ b/style.css
@@ -693,7 +693,7 @@ body.darkmode .competence-cards .imgs img:nth-child(1){
 }
 
 body.modal-show {
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .modal-box {
